###############################################################################
# License: BSD Zero Clause License file
# Copyright:
#   (C) 2021 Alexander Shaduri <ashaduri@gmail.com>
###############################################################################


add_subdirectory(build_config)

add_subdirectory(applib)
add_subdirectory(gui)
add_subdirectory(hz)
add_subdirectory(libdebug)
add_subdirectory(rconfig)
add_subdirectory(test_all)

