###############################################################################
# License: BSD Zero Clause License file
# Copyright:
#   (C) 2021 Alexander Shaduri <ashaduri@gmail.com>
###############################################################################

#set(CATCH_INSTALL_DOCS OFF CACHE INTERNAL "")
#set(CATCH_INSTALL_EXTRAS OFF CACHE INTERNAL "")
#set(CATCH_DEVELOPMENT_BUILD OFF CACHE INTERNAL "")

add_subdirectory(Catch2)
